# ar_robot_localization

./: CMakeLists.txt  README.md  nodelets.xml  package.xml
include/ar_robot_localization/: ar_robot_loc_nodelet.h
include/bluerov_visual_pose/: visual_pose.h
launch/: test.launch
plugins/: visual_pose_plugins.xml
src/: ar_robot_loc_node.cpp  ar_robot_loc_nodelet.cpp  pose_node.cpp  pose_nodelet.cpp
