<?xml version="1.0"?>
<package format="2">
  <name>ar_robot_localization</name>
  <version>0.1.0</version>
  <description>BlueROV location with respect to AR tags in world.</description>

  <author email="monika.roznere.gr@dartmouth.edu">Monika Roznere</author>
  <maintainer email="monika.roznere.gr@dartmouth.edu">Monika Roznere</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>pluginlib</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>pluginlib</exec_depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml"/>
  </export>
</package>
